--- a/52-weeks.html
+++ b/52-weeks.html
@@ -5,6 +5,9 @@ auto;max-width:650px;line-height:1.6;font-size:14px;font-family:'Helvetica', san
 .project {
 	border-top: #D2D2D2 1px solid;
 }
+td{
+	font-size:14px;
+}
 </style>
 <body>
 <h1>52 Week App Challenge</h1>
