--- a/52-weeks.html
+++ b/52-weeks.html
@@ -19,6 +19,7 @@ td{
 	<li>Become more familiar with Reach Native</li>
 	<li>Become a better time estimator, and force myself to avoid feature/scope creep</li>
 	<li>A good break from building things for others</li>
+	<li>Ship something, instead of having project ADHD</li>
 </ul>
 
 <h3>Rules / Schedule</h3>
