--- a/52-weeks.html
+++ b/52-weeks.html
@@ -76,6 +76,7 @@ td{
 	<li>Project must be submitted on Saturday</li>
 	<li>After Sunday planning, features can only be cut, not added </li>
 	<li>Have fun, if this encourages my burn-out, take a few weeks off </li>
+	<li>Do not create apps with financial motivation first</li>
 </ul>
 
 <h3>
