--- a/52-weeks.html
+++ b/52-weeks.html
@@ -20,6 +20,7 @@ td{
 	<li>Become a better time estimator, and force myself to avoid feature/scope creep</li>
 	<li>A good break from building things for others</li>
 	<li>Ship something, instead of having project ADHD</li>
+	<li>Explore new niches</li>
 </ul>
 
 <h3>Rules / Schedule</h3>
