--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <link rel="shortcut icon" href="images/alec.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>George Lejnine | Software Developer</title>
+    <title>George Lejnine | Senior Software Engineer</title>
     <meta name="description"
-          content="George Lejnine is a Software Developer specializing in Objective-C and Python. Freelance iOS developer. Founder and developer at gitDiscovered.com">
+          content="Senior Software Engineer specialized in enterprise Ionic and Angular development, as well as UX/UI.">
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/scripts.js"></script>
