--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </tbody>
     </table>
     <div class="footer">
-      <span class="footer-text fleft" id="resource">index.html</span><span class="footer-text fleft" id="line-num"></span><span class="footer-text fright">UTF-8</span><span class="footer-text fright">JavaScript</span>
+      <span class="footer-text fleft" id="resource">index.html</span><span class="footer-text fleft" id="line-num"></span><span class="footer-text fright">UTF-8</span><span class="footer-text fright">TypeScript</span>
     </div>
     <script type="text/javascript">
       mixpanel.track("Home Page");
