--- a/index.html
+++ b/index.html
@@ -6,35 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>George Lejnine | Senior Software Engineer</title>
     <meta name="description"
-          content="Senior Software Engineer specialized in enterprise Ionic and Angular development, as well as UX/UI.">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <script type="text/javascript">
-      $(function(){
-        $.getJSON('index.json')
-        .done(function(data){
-    			bootPage('index', data);
-    		})
-        .fail(function(){
-          $.getJSON('index.json')
-          .done(function(data){
-      			bootPage('index', data);
-      		});
-        });
-      });
-    </script>
-  </head>
-  <body>
-    <table>
-      <tbody id="container">
-      </tbody>
-    </table>
-    <div class="footer">
-      <span class="footer-text fleft" id="resource">index.html</span><span class="footer-text fleft" id="line-num"></span><span class="footer-text fright">UTF-8</span><span class="footer-text fright">TypeScript</span>
-    </div>
-    <script type="text/javascript">
-      mixpanel.track("Home Page");
-    </script>
-  </body>
+          content="Senior Software Engineer / Senior Analyst at Panera Bread.">
+    <h1>George Lejnine</h1>
+    <h2>Founder of Cloudbuilds, LLC</h2>
+    <h3>Properties</h3>
+    <li>
+      <a href="https://uigrab.com">UIGrab - UX Design Inspirations and App Screenshots</a>
+    </li>
 </html>
