--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>George Lejnine | Senior Software Engineer</title>
     <meta name="description"
-          content="Senior Software Engineer / Senior Analyst at Panera Bread.">
+          content="Senior Software Engineer / Senior Analyst at Panera Bread. (Feb 1, 2021 - future)">
     <h1>George Lejnine</h1>
     <h2>Founder of Cloudbuilds, LLC a web media and saas company</h2>
     <h3>Properties</h3>
