--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <meta name="description"
           content="Senior Software Engineer, Senior Analyst at Panera Bread">
     <h1>George Lejnine</h1>
-    <h2>Senior Software Engineer, Senior Analyst at Panera Bread -- (Feb 1, 2021 - future)</h2>
+    <h2>Senior Software Engineer, Senior Analyst at Panera Bread</h2>
     <h3>
-      
-    </h3>
-    <h2>Founder of Cloudbuilds, LLC a web media and saas company</h2>
-    <h3>Properties</h3>
-    <li>
-      <a href="https://uigrab.com">UIGrab - UX Design Inspirations and App Screenshots</a>
-    </li>
 </html>
