--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
           content="Senior Software Engineer, Senior Analyst at Panera Bread">
     <h1>George Lejnine</h1>
     <h2>Senior Software Engineer, Senior Analyst at Panera Bread</h2>
-    <h3>Founder of <a href="https://localmerit.com">Local Merit</a></h3>
+    <h3>Founder of <a href="https://cloudbuilds.io">Cloudbuilds, LLC</a></h3>
 </html>
